--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:44:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:45:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -278,10 +278,10 @@ E thru 1</td>
 E thru 1</td>
       <td>Will Zalatoris +2
 E thru 6</td>
-      <td class="greyout leftborder">Tony Finau +6
-+2 thru 10</td>
-      <td class="greyout">Patrick Cantlay +7
+      <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
+      <td class="greyout">Tony Finau +8
++4 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -780,22 +780,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">9</td>
-      <td>Shane Lowry -2
-E thru 1</td>
-      <td>Dustin Johnson(W) +1
-E thru 5</td>
-      <td>Matthew Fitzpatrick +4
-E thru 12</td>
-      <td>Tony Finau +6
-+2 thru 10</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">10</td>
       <td>Collin Morikawa +1
@@ -809,6 +793,22 @@ E thru 7</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">11</td>
+      <td>Shane Lowry -2
+E thru 1</td>
+      <td>Dustin Johnson(W) +1
+E thru 5</td>
+      <td>Matthew Fitzpatrick +4
+E thru 12</td>
+      <td>Tony Finau +8
++4 thru 11</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">20</td>
       <td>Collin Morikawa +1
 E thru 4</td>
       <td>Jon Rahm(W) +4
 -3 thru 17</td>
-      <td>Tony Finau +6
-+2 thru 10</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
+      <td>Tony Finau +8
++4 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
