--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:44:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:45:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ E thru 1</td>
 E thru 1</td>
       <td>Will Zalatoris +2
 E thru 6</td>
-      <td class="greyout leftborder">Tony Finau +6
-+2 thru 10</td>
-      <td class="greyout">Patrick Cantlay +7
+      <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
+      <td class="greyout">Tony Finau +8
++4 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -301,15 +301,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">10</td>
       <td>Justin Thomas(W) -1
 E thru 1</td>
       <td>Collin Morikawa +1
 E thru 4</td>
       <td>Will Zalatoris +2
 E thru 6</td>
-      <td>Tony Finau +6
-+2 thru 10</td>
+      <td>Tony Finau +8
++4 thru 11</td>
       <td class="greyout leftborder">Daniel Berger +13
 +6 thru 16</td>
       <td class="greyout">Brooks Koepka
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">20</td>
       <td>Collin Morikawa +1
 E thru 4</td>
       <td>Jon Rahm(W) +4
 -3 thru 17</td>
-      <td>Tony Finau +6
-+2 thru 10</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
+      <td>Tony Finau +8
++4 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
