--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:46:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:47:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-16</td>
+      <td class="bigbold">-17</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Corey Conners -2
 -1 thru 2</td>
-      <td>Talor Gooch +1
--2 thru 7</td>
+      <td>Talor Gooch E
+-3 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -396,6 +396,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -2
+-1 thru 2</td>
+      <td>Talor Gooch E
+-3 thru 8</td>
+      <td>Hideki Matsuyama +2
+E thru 7</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 thru 17</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -6
@@ -441,22 +457,6 @@ E thru 6</td>
       <td class="greyout leftborder">Webb Simpson +5
 +3 thru 6</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -2
--1 thru 2</td>
-      <td>Talor Gooch +1
--2 thru 7</td>
-      <td>Hideki Matsuyama +2
-E thru 7</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 thru 17</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
