--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:52:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:53:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-14</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Corey Conners -1
-E thru 3</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td class="greyout leftborder">Russell Henley +4
--3 thru 17</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -9
@@ -220,16 +204,32 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-13</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Corey Conners -1
+E thru 3</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
+      <td class="greyout leftborder">Russell Henley +4
+-3 thru 17</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler(W) -9
 Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Hideki Matsuyama +2
 E thru 7</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -237,31 +237,31 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
 E thru 3</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Viktor Hovland +3
 E thru 7</td>
+      <td class="greyout leftborder">Will Zalatoris +3
++1 thru 7</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
       <td>Shane Lowry -2
 E thru 1</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Tony Finau +8
@@ -277,7 +277,7 @@ E thru 3</td>
       <td>Rory McIlroy -1
 -2 thru 4</td>
       <td>Robert MacIntyre +3
--3 thru 15</td>
+-3 thru 16</td>
       <td class="greyout leftborder">Jon Rahm +4
 -3 thru 17</td>
       <td class="greyout">Patrick Cantlay +7
@@ -300,22 +300,6 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Justin Thomas(W) -2
--1 thru 2</td>
-      <td>Shane Lowry -2
-E thru 1</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +4
-E thru 12</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -6
@@ -329,6 +313,22 @@ E thru 7</td>
       <td class="greyout leftborder">Marc Leishman +5
 +2 thru 8</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Shane Lowry -2
+E thru 1</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +4
+E thru 12</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -396,22 +396,6 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -9
-Not started</td>
-      <td>Corey Conners -1
-E thru 3</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td>Jon Rahm +4
--3 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -6
@@ -422,6 +406,22 @@ Not started</td>
 E thru 3</td>
       <td>Viktor Hovland +3
 E thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler(W) -9
+Not started</td>
+      <td>Corey Conners -1
+E thru 3</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
+      <td>Jon Rahm +4
+-3 thru 17</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -444,22 +444,6 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Corey Conners -1
-E thru 3</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td>Jon Rahm(W) +4
--3 thru 17</td>
-      <td class="greyout leftborder">Webb Simpson +5
-+3 thru 6</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -9
@@ -472,6 +456,22 @@ E thru 12</td>
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Corey Conners -1
+E thru 3</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
+      <td>Jon Rahm(W) +4
+-3 thru 17</td>
+      <td class="greyout leftborder">Webb Simpson +5
++3 thru 6</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -508,22 +508,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-E thru 3</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td>Viktor Hovland +3
-E thru 7</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 thru 17</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler(W) -9
@@ -540,16 +524,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+E thru 3</td>
+      <td>Viktor Hovland +3
+E thru 7</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 thru 17</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jabby</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
       <td>Corey Conners -1
 E thru 3</td>
       <td>Rory McIlroy -1
 -2 thru 4</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +4
 -3 thru 17</td>
       <td class="greyout">Brooks Koepka
@@ -557,13 +557,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners(W) -1
 E thru 3</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
       <td>Jon Rahm +4
 -3 thru 17</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -586,22 +586,6 @@ E thru 3</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas -2
--1 thru 2</td>
-      <td>Rory McIlroy -1
--2 thru 4</td>
-      <td>Collin Morikawa +1
-E thru 4</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 7</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -636,14 +620,30 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">1</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Rory McIlroy -1
+-2 thru 4</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
+      <td>Viktor Hovland +3
+E thru 7</td>
+      <td class="greyout leftborder">Will Zalatoris +3
++1 thru 7</td>
+      <td class="greyout">Tiger Woods(W) +13
++6 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -653,17 +653,17 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">4</td>
       <td>Corey Conners -1
 E thru 3</td>
       <td>Rory McIlroy -1
 -2 thru 4</td>
       <td>Collin Morikawa +1
 E thru 4</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Viktor Hovland +3
 E thru 7</td>
+      <td class="greyout leftborder">Will Zalatoris +3
++1 thru 7</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
@@ -684,22 +684,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas(W) -2
--1 thru 2</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td>Viktor Hovland +3
-E thru 7</td>
-      <td>Jon Rahm +4
--3 thru 17</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">7</td>
       <td>Corey Conners(W) -1
@@ -707,27 +691,11 @@ E thru 3</td>
       <td>Collin Morikawa +1
 E thru 4</td>
       <td>Robert MacIntyre +3
--3 thru 15</td>
+-3 thru 16</td>
       <td>Jon Rahm +4
 -3 thru 17</td>
       <td class="greyout leftborder">Daniel Berger +13
-+6 thru 16</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas -2
--1 thru 2</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td>Viktor Hovland +3
-E thru 7</td>
-      <td>Jon Rahm(W) +4
--3 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
++6 thru 17</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -748,6 +716,38 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">8</td>
+      <td>Justin Thomas(W) -2
+-1 thru 2</td>
+      <td>Viktor Hovland +3
+E thru 7</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
+      <td>Jon Rahm +4
+-3 thru 17</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">8</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Viktor Hovland +3
+E thru 7</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
+      <td>Jon Rahm(W) +4
+-3 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">8</td>
       <td>Justin Thomas -2
@@ -764,22 +764,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">10</td>
-      <td>Collin Morikawa +1
-E thru 4</td>
-      <td>Will Zalatoris +2
-E thru 6</td>
-      <td>Viktor Hovland(W) +3
-E thru 7</td>
-      <td>Jon Rahm +4
--3 thru 17</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">10</td>
       <td>Cameron Smith -6
@@ -792,6 +776,22 @@ E thru 3</td>
 +6 thru 17</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">11</td>
+      <td>Collin Morikawa +1
+E thru 4</td>
+      <td>Viktor Hovland(W) +3
+E thru 7</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
+      <td>Jon Rahm +4
+-3 thru 17</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -823,7 +823,7 @@ E thru 7</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Daniel Berger +13
-+6 thru 16</td>
++6 thru 17</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
