--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:53:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:53:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -324,10 +324,10 @@ Not started</td>
 -1 thru 2</td>
       <td>Shane Lowry -2
 E thru 1</td>
-      <td>Will Zalatoris +3
+      <td>Matthew Fitzpatrick +3
+-1 thru 13</td>
+      <td class="greyout leftborder">Will Zalatoris +3
 +1 thru 7</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +4
-E thru 12</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -445,13 +445,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Cameron Smith(W) -6
 Not started</td>
-      <td>Matthew Fitzpatrick +4
-E thru 12</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 13</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -470,8 +470,8 @@ E thru 3</td>
 +1 thru 7</td>
       <td>Jon Rahm(W) +4
 -3 thru 17</td>
-      <td class="greyout leftborder">Webb Simpson +5
-+3 thru 6</td>
+      <td class="greyout leftborder">Webb Simpson +6
++4 thru 7</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -812,6 +812,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">11</td>
+      <td>Shane Lowry -2
+E thru 1</td>
+      <td>Dustin Johnson(W) +2
++1 thru 6</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 13</td>
+      <td>Tony Finau +8
++4 thru 12</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">12</td>
       <td>Justin Thomas(W) -2
@@ -825,22 +841,6 @@ E thru 7</td>
       <td class="greyout leftborder">Daniel Berger +13
 +6 thru 17</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">12</td>
-      <td>Shane Lowry -2
-E thru 1</td>
-      <td>Dustin Johnson(W) +2
-+1 thru 6</td>
-      <td>Matthew Fitzpatrick +4
-E thru 12</td>
-      <td>Tony Finau +8
-+4 thru 12</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
