--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:53:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:53:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -180,10 +180,10 @@ Not started</td>
 -1 thru 2</td>
       <td>Shane Lowry -2
 E thru 1</td>
-      <td>Will Zalatoris +3
+      <td>Matthew Fitzpatrick +3
+-1 thru 13</td>
+      <td class="greyout leftborder">Will Zalatoris +3
 +1 thru 7</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +4
-E thru 12</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
