--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:55:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:55:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-17</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith(W) -7
 -1 thru 1</td>
       <td>Corey Conners -1
@@ -159,7 +159,7 @@ Missed Cut</td>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-15</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith(W) -7
 -1 thru 1</td>
       <td>Shane Lowry -2
@@ -175,7 +175,7 @@ Missed Cut</td>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
       <td>Corey Conners -1
@@ -191,7 +191,7 @@ Missed Cut</td>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith(W) -7
 -1 thru 1</td>
       <td>Corey Conners -1
@@ -207,7 +207,7 @@ Missed Cut</td>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
       <td>Shane Lowry -2
@@ -223,7 +223,7 @@ Missed Cut</td>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-13</td>
       <td>Scottie Scheffler(W) -9
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
       <td>Hideki Matsuyama +2
@@ -239,7 +239,7 @@ Missed Cut</td>
       <td class="bigbold">Mark MacKave</td>
       <td class="bigbold">-12</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
       <td>Corey Conners -1
@@ -255,7 +255,7 @@ Missed Cut</td>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
       <td>Shane Lowry -2
@@ -271,7 +271,7 @@ E thru 1</td>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler(W) -9
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 3</td>
       <td>Rory McIlroy -1
@@ -287,7 +287,7 @@ E thru 3</td>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-9</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
       <td>Rory McIlroy -1
@@ -431,7 +431,7 @@ Missed Cut</td>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith(W) -7
 -1 thru 1</td>
       <td>Matthew Fitzpatrick +3
@@ -447,7 +447,7 @@ Missed Cut</td>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -9
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 3</td>
       <td>Will Zalatoris +3
@@ -463,7 +463,7 @@ Missed Cut</td>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 3</td>
       <td>Will Zalatoris +3
@@ -479,7 +479,7 @@ Missed Cut</td>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -1
 E thru 3</td>
       <td>Viktor Hovland +3
@@ -495,7 +495,7 @@ Missed Cut</td>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -9
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
       <td>Patrick Cantlay +7
@@ -511,7 +511,7 @@ Missed Cut</td>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy -1
 -2 thru 4</td>
       <td>Viktor Hovland +3
@@ -879,7 +879,7 @@ Missed Cut</td>
       <td class="bigbold">CRED</td>
       <td class="bigbold">16</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Dustin Johnson +2
 +1 thru 6</td>
       <td>Patrick Cantlay +7
