--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:55:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:55:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -143,7 +143,7 @@ body {
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-10</td>
       <td>Scottie Scheffler -9
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
       <td>Shane Lowry -2
@@ -207,7 +207,7 @@ Missed Cut</td>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -9
-Not started</td>
+E thru 1</td>
       <td>Shane Lowry -2
 E thru 1</td>
       <td>Will Zalatoris +3
