--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:56:41 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:57:24 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -163,7 +163,7 @@ E thru 1</td>
       <td>Justin Thomas -2
 -1 thru 2</td>
       <td>Rory McIlroy -1
--2 thru 4</td>
+-2 thru 5</td>
       <td>Tommy Fleetwood(W) +1
 E thru 4</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -220,22 +220,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
-      <td>Sungjae Im -4
-E thru 1</td>
-      <td>Justin Thomas -2
--1 thru 2</td>
-      <td>Collin Morikawa +1
-E thru 4</td>
-      <td>Viktor Hovland(W) +3
-E thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-1</td>
       <td>Justin Thomas(W) -2
@@ -252,14 +236,30 @@ E thru 3</td>
 +8 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-1</td>
+      <td>Sungjae Im -4
+E thru 1</td>
+      <td>Justin Thomas -2
+-1 thru 2</td>
+      <td>Collin Morikawa +2
++1 thru 5</td>
+      <td>Viktor Hovland(W) +3
+E thru 7</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Cameron Smith(W) -7
 -1 thru 1</td>
       <td>Rory McIlroy -1
--2 thru 4</td>
-      <td>Collin Morikawa +1
-E thru 4</td>
+-2 thru 5</td>
+      <td>Collin Morikawa +2
++1 thru 5</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -285,11 +285,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Corey Conners(W) -1
 E thru 3</td>
-      <td>Collin Morikawa +1
-E thru 4</td>
+      <td>Collin Morikawa +2
++1 thru 5</td>
       <td>Robert MacIntyre +3
 -3 thru 16</td>
       <td>Jon Rahm +4
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">11</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
-      <td>Collin Morikawa +1
-E thru 4</td>
+      <td>Collin Morikawa +2
++1 thru 5</td>
       <td>Will Zalatoris +3
 +1 thru 7</td>
       <td>Tony Finau +8
@@ -317,9 +317,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
-      <td>Collin Morikawa +1
-E thru 4</td>
+      <td class="bigbold">16</td>
+      <td>Collin Morikawa +2
++1 thru 5</td>
       <td>Viktor Hovland(W) +3
 E thru 7</td>
       <td>Jon Rahm +4
@@ -349,9 +349,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">20</td>
-      <td>Collin Morikawa +1
-E thru 4</td>
+      <td class="bigbold">21</td>
+      <td>Collin Morikawa +2
++1 thru 5</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td>Patrick Cantlay +7
