--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:01:42 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:02:25 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,13 +141,13 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler -9
 E thru 1</td>
+      <td>Shane Lowry -3
+-1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
-      <td>Shane Lowry -2
-E thru 1</td>
       <td>Will Zalatoris +3
 +1 thru 7</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -173,18 +173,34 @@ E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
+      <td>Shane Lowry -3
+-1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
-      <td>Shane Lowry -2
-E thru 1</td>
       <td>Matthew Fitzpatrick +3
 -1 thru 13</td>
       <td class="greyout leftborder">Will Zalatoris +3
 +1 thru 7</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -9
+E thru 1</td>
+      <td>Shane Lowry -3
+-1 thru 2</td>
+      <td>Will Zalatoris +3
++1 thru 7</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -204,28 +220,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -9
-E thru 1</td>
-      <td>Shane Lowry -2
-E thru 1</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
+      <td>Shane Lowry -3
+-1 thru 2</td>
       <td>Justin Thomas(W) -2
 -1 thru 2</td>
-      <td>Shane Lowry -2
-E thru 1</td>
       <td>Corey Conners -1
 E thru 4</td>
       <td>Jon Rahm +4
@@ -239,7 +239,7 @@ E thru 4</td>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-1</td>
       <td>Sungjae Im -4
-E thru 1</td>
+E thru 2</td>
       <td>Justin Thomas -2
 -1 thru 2</td>
       <td>Collin Morikawa +2
