--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:03:51 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:04:34 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,13 +141,13 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-10</td>
       <td>Scottie Scheffler -9
 E thru 1</td>
       <td>Shane Lowry -3
 -1 thru 2</td>
-      <td>Justin Thomas(W) -2
--1 thru 2</td>
+      <td>Justin Thomas(W) -1
+E thru 3</td>
       <td>Will Zalatoris +3
 +1 thru 7</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -157,11 +157,11 @@ E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
-      <td>Justin Thomas -2
--1 thru 2</td>
+      <td>Justin Thomas -1
+E thru 3</td>
       <td>Rory McIlroy -1
 -2 thru 5</td>
       <td>Tommy Fleetwood(W) +1
@@ -173,13 +173,13 @@ E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
       <td>Shane Lowry -3
 -1 thru 2</td>
-      <td>Justin Thomas(W) -2
--1 thru 2</td>
+      <td>Justin Thomas(W) -1
+E thru 3</td>
       <td>Matthew Fitzpatrick +3
 -1 thru 13</td>
       <td class="greyout leftborder">Will Zalatoris +3
@@ -205,13 +205,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -7
 -1 thru 1</td>
-      <td>Justin Thomas -2
--1 thru 2</td>
       <td>Corey Conners -1
 E thru 4</td>
+      <td>Justin Thomas -1
+E thru 3</td>
       <td>Viktor Hovland +3
 E thru 8</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -221,11 +221,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Shane Lowry -3
 -1 thru 2</td>
-      <td>Justin Thomas(W) -2
--1 thru 2</td>
+      <td>Justin Thomas(W) -1
+E thru 3</td>
       <td>Corey Conners -1
 E thru 4</td>
       <td>Jon Rahm +4
@@ -237,11 +237,11 @@ E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Sungjae Im -4
 E thru 2</td>
-      <td>Justin Thomas -2
--1 thru 2</td>
+      <td>Justin Thomas -1
+E thru 3</td>
       <td>Collin Morikawa +2
 +1 thru 5</td>
       <td>Viktor Hovland(W) +3
@@ -269,9 +269,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">4</td>
-      <td>Justin Thomas -2
--1 thru 2</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas -1
+E thru 3</td>
       <td>Corey Conners -1
 E thru 4</td>
       <td>Dustin Johnson +1
@@ -301,9 +301,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">11</td>
-      <td>Justin Thomas(W) -2
--1 thru 2</td>
+      <td class="bigbold">12</td>
+      <td>Justin Thomas(W) -1
+E thru 3</td>
       <td>Collin Morikawa +2
 +1 thru 5</td>
       <td>Will Zalatoris +3
@@ -325,7 +325,7 @@ E thru 8</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td>Patrick Reed +7
-+3 thru 11</td>
++3 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
