--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:04:34 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:05:17 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -262,10 +262,10 @@ E thru 1</td>
 E thru 3</td>
       <td>Will Zalatoris +3
 +1 thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
+      <td class="greyout leftborder">Tony Finau +6
++2 thru 13</td>
+      <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
-      <td class="greyout">Tony Finau +8
-+4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -275,9 +275,9 @@ E thru 1</td>
       <td>Corey Conners -1
 E thru 4</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Robert MacIntyre +3
--3 thru 16</td>
+-3 thru 17</td>
       <td class="greyout leftborder">Jon Rahm +4
 -3 (F)</td>
       <td class="greyout">Patrick Cantlay +7
@@ -323,7 +323,7 @@ E thru 1</td>
       <td>Justin Thomas(W) -1
 E thru 3</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Viktor Hovland +3
 E thru 8</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -385,7 +385,7 @@ Missed Cut</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
       <td>Rory McIlroy(W) -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Justin Thomas -1
 E thru 3</td>
       <td>Hideki Matsuyama +2
@@ -513,7 +513,7 @@ Missed Cut</td>
       <td>Scottie Scheffler -9
 E thru 1</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Viktor Hovland +3
 E thru 8</td>
       <td>Jon Rahm(W) +4
@@ -561,7 +561,7 @@ Missed Cut</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Viktor Hovland +3
 E thru 8</td>
       <td>Jon Rahm(W) +4
@@ -579,7 +579,7 @@ E thru 3</td>
       <td>Corey Conners -1
 E thru 4</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Will Zalatoris +3
 +1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -593,7 +593,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 E thru 4</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Justin Thomas -1
 E thru 3</td>
       <td>Jon Rahm(W) +4
@@ -623,7 +623,7 @@ Missed Cut</td>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">3</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Justin Thomas -1
 E thru 3</td>
       <td>Collin Morikawa(W) +2
@@ -639,7 +639,7 @@ Missed Cut</td>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">3</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Justin Thomas -1
 E thru 3</td>
       <td>Collin Morikawa +2
@@ -673,7 +673,7 @@ Missed Cut</td>
       <td>Corey Conners -1
 E thru 4</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Collin Morikawa +2
 +1 thru 5</td>
       <td>Viktor Hovland +3
@@ -687,7 +687,7 @@ Missed Cut</td>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">7</td>
       <td>Rory McIlroy(W) -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Dustin Johnson +1
 E thru 7</td>
       <td>Viktor Hovland +3
@@ -700,6 +700,22 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">7</td>
+      <td>Shane Lowry -3
+-1 thru 2</td>
+      <td>Dustin Johnson(W) +1
+E thru 7</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 13</td>
+      <td>Tony Finau +6
++2 thru 13</td>
+      <td class="greyout leftborder">Louis Oosthuizen
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">8</td>
       <td>Corey Conners(W) -1
@@ -707,7 +723,7 @@ E thru 4</td>
       <td>Collin Morikawa +2
 +1 thru 5</td>
       <td>Robert MacIntyre +3
--3 thru 16</td>
+-3 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Daniel Berger +13
@@ -767,7 +783,7 @@ Missed Cut</td>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">9</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Justin Thomas -1
 E thru 3</td>
       <td>Jon Rahm +4
@@ -777,22 +793,6 @@ E thru 3</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">9</td>
-      <td>Shane Lowry -3
--1 thru 2</td>
-      <td>Dustin Johnson(W) +1
-E thru 7</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 13</td>
-      <td>Tony Finau +8
-+4 thru 12</td>
-      <td class="greyout leftborder">Louis Oosthuizen
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">21</td>
+      <td class="bigbold">19</td>
       <td>Collin Morikawa +2
 +1 thru 5</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
+      <td>Tony Finau +6
++2 thru 13</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
-      <td>Tony Finau +8
-+4 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
