--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:04:34 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:05:17 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ E thru 1</td>
 E thru 3</td>
       <td>Will Zalatoris +3
 +1 thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
+      <td class="greyout leftborder">Tony Finau +6
++2 thru 13</td>
+      <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
-      <td class="greyout">Tony Finau +8
-+4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -163,7 +163,7 @@ E thru 3</td>
       <td>Justin Thomas -1
 E thru 3</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Tommy Fleetwood(W) +1
 E thru 5</td>
       <td class="greyout leftborder">Viktor Hovland +3
@@ -257,7 +257,7 @@ Missed Cut</td>
       <td>Cameron Smith(W) -7
 -1 thru 1</td>
       <td>Rory McIlroy -1
--2 thru 5</td>
+-2 thru 6</td>
       <td>Collin Morikawa +2
 +1 thru 5</td>
       <td>Patrick Cantlay +7
@@ -291,7 +291,7 @@ E thru 4</td>
       <td>Collin Morikawa +2
 +1 thru 5</td>
       <td>Robert MacIntyre +3
--3 thru 16</td>
+-3 thru 17</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Daniel Berger +13
@@ -301,15 +301,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">10</td>
       <td>Justin Thomas(W) -1
 E thru 3</td>
       <td>Collin Morikawa +2
 +1 thru 5</td>
       <td>Will Zalatoris +3
 +1 thru 7</td>
-      <td>Tony Finau +8
-+4 thru 12</td>
+      <td>Tony Finau +6
++2 thru 13</td>
       <td class="greyout leftborder">Daniel Berger +13
 +6 thru 17</td>
       <td class="greyout">Brooks Koepka
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">21</td>
+      <td class="bigbold">19</td>
       <td>Collin Morikawa +2
 +1 thru 5</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
+      <td>Tony Finau +6
++2 thru 13</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
-      <td>Tony Finau +8
-+4 thru 12</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
