--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:08:52 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:09:35 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,19 +141,51 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler -9
 E thru 1</td>
       <td>Shane Lowry -3
 -1 thru 2</td>
       <td>Justin Thomas(W) -1
 E thru 3</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 thru 13</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -7
+-1 thru 1</td>
+      <td>Shane Lowry -3
+-1 thru 2</td>
+      <td>Justin Thomas(W) -1
+E thru 3</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
+-1 thru 14</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler(W) -9
+E thru 1</td>
+      <td>Shane Lowry -3
+-1 thru 2</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -170,38 +202,6 @@ E thru 5</td>
 E thru 8</td>
       <td class="greyout">Joaquin Niemann +5
 +1 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -7
--1 thru 1</td>
-      <td>Shane Lowry -3
--1 thru 2</td>
-      <td>Justin Thomas(W) -1
-E thru 3</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 14</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 7</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler(W) -9
-E thru 1</td>
-      <td>Shane Lowry -3
--1 thru 2</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -301,13 +301,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">9</td>
       <td>Justin Thomas(W) -1
 E thru 3</td>
       <td>Collin Morikawa +2
 +1 thru 6</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
       <td>Tony Finau +6
 +2 thru 13</td>
       <td class="greyout leftborder">Daniel Berger +15
