--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:08:52 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:09:35 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,6 +172,22 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler -9
+E thru 1</td>
+      <td>Cameron Smith(W) -7
+-1 thru 1</td>
+      <td>Corey Conners -1
+E thru 4</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td class="greyout leftborder">Russell Henley +5
+-2 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-14</td>
       <td>Scottie Scheffler -9
@@ -188,19 +204,19 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-14</td>
-      <td>Scottie Scheffler -9
+      <td>Scottie Scheffler(W) -9
 E thru 1</td>
-      <td>Cameron Smith(W) -7
+      <td>Cameron Smith -7
 -1 thru 1</td>
-      <td>Corey Conners -1
-E thru 4</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Russell Henley +5
--2 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td>Hideki Matsuyama +2
+E thru 8</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -220,48 +236,32 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler(W) -9
-E thru 1</td>
-      <td>Cameron Smith -7
--1 thru 1</td>
-      <td>Hideki Matsuyama +2
-E thru 8</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-13</td>
       <td>Scottie Scheffler -9
 E thru 1</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
       <td>Corey Conners -1
 E thru 4</td>
-      <td>Viktor Hovland +3
+      <td>Will Zalatoris +2
 E thru 8</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 7</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 8</td>
       <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler -9
 E thru 1</td>
       <td>Shane Lowry -3
 -1 thru 2</td>
       <td>Justin Thomas(W) -1
 E thru 3</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
       <td class="greyout leftborder">Tony Finau +6
 +2 thru 13</td>
       <td class="greyout">Patrick Cantlay +7
@@ -300,6 +300,22 @@ E thru 7</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -7
+-1 thru 1</td>
+      <td>Shane Lowry -3
+-1 thru 2</td>
+      <td>Justin Thomas(W) -1
+E thru 3</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
+-1 thru 14</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-9</td>
       <td>Cameron Smith(W) -7
@@ -329,22 +345,6 @@ E thru 8</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -7
--1 thru 1</td>
-      <td>Shane Lowry -3
--1 thru 2</td>
-      <td>Justin Thomas(W) -1
-E thru 3</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 14</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 7</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -396,6 +396,22 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -9
+E thru 1</td>
+      <td>Corey Conners -1
+E thru 4</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -7
@@ -444,36 +460,36 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -9
-E thru 1</td>
-      <td>Corey Conners -1
-E thru 4</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Scottie Scheffler -9
 E thru 1</td>
       <td>Corey Conners -1
 E thru 4</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout leftborder">Webb Simpson +6
 +4 thru 8</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -7
+-1 thru 1</td>
+      <td>Corey Conners -1
+E thru 4</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td>Viktor Hovland +3
+E thru 8</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -524,35 +540,35 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -7
--1 thru 1</td>
-      <td>Corey Conners -1
-E thru 4</td>
-      <td>Viktor Hovland +3
-E thru 8</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Cameron Smith -7
 -1 thru 1</td>
       <td>Corey Conners(W) -1
 E thru 4</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-1</td>
+      <td>Justin Thomas(W) -1
+E thru 3</td>
+      <td>Corey Conners -1
+E thru 4</td>
+      <td>Rory McIlroy -1
+-2 thru 6</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -572,19 +588,19 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -7
+-1 thru 1</td>
       <td>Justin Thomas(W) -1
 E thru 3</td>
-      <td>Corey Conners -1
-E thru 4</td>
-      <td>Rory McIlroy -1
--2 thru 6</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm +4
--3 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -604,20 +620,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">2</td>
-      <td>Cameron Smith -7
--1 thru 1</td>
-      <td>Justin Thomas(W) -1
+      <td>Rory McIlroy -1
+-2 thru 6</td>
+      <td>Justin Thomas -1
 E thru 3</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
+      <td>Collin Morikawa +2
++1 thru 6</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 8</td>
+      <td class="greyout">Tiger Woods(W) +13
++6 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -636,20 +652,20 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">4</td>
+      <td>Corey Conners -1
+E thru 4</td>
       <td>Rory McIlroy -1
 -2 thru 6</td>
-      <td>Justin Thomas -1
-E thru 3</td>
       <td>Collin Morikawa +2
 +1 thru 6</td>
-      <td>Viktor Hovland +3
+      <td>Will Zalatoris +2
 E thru 8</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 7</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 8</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -665,22 +681,6 @@ E thru 8</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners -1
-E thru 4</td>
-      <td>Rory McIlroy -1
--2 thru 6</td>
-      <td>Collin Morikawa +2
-+1 thru 6</td>
-      <td>Viktor Hovland +3
-E thru 8</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 7</td>
-      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -716,6 +716,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">8</td>
+      <td>Justin Thomas(W) -1
+E thru 3</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td>Viktor Hovland +3
+E thru 8</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">8</td>
       <td>Corey Conners(W) -1
@@ -728,6 +744,22 @@ E thru 4</td>
 -3 (F)</td>
       <td class="greyout leftborder">Daniel Berger +15
 +8 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">8</td>
+      <td>Justin Thomas -1
+E thru 3</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
+      <td>Viktor Hovland +3
+E thru 8</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -748,38 +780,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">9</td>
-      <td>Justin Thomas(W) -1
-E thru 3</td>
-      <td>Viktor Hovland +3
-E thru 8</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">9</td>
-      <td>Justin Thomas -1
-E thru 3</td>
-      <td>Viktor Hovland +3
-E thru 8</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">9</td>
       <td>Rory McIlroy -1
@@ -797,13 +797,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">11</td>
       <td>Collin Morikawa +2
 +1 thru 6</td>
+      <td>Will Zalatoris +2
+E thru 8</td>
       <td>Viktor Hovland(W) +3
 E thru 8</td>
-      <td>Will Zalatoris +3
-+1 thru 7</td>
       <td>Jon Rahm +4
 -3 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
